# mapi

./: .gitignore  CONTRIBUTING.md  README.md  design.md  justfile  moon.mod.json
.github/workflows/: ci.yml  document.yml  publish.yml
benchmarks/: .gitignore  README.md  package.json  run.ts  tsconfig.json
benchmarks/k6/: petstore.js
benchmarks/servers/go-gin/: go.mod  main.go
benchmarks/servers/mbt-mapi/: host.ts  main.mbt  moon.mod.json  moon.pkg
benchmarks/servers/rust-axum/: Cargo.toml
benchmarks/servers/rust-axum/src/: main.rs
examples/petstore/: .gitignore  justfile  moon.mod.json
examples/petstore/specs/: petstore.json
examples/petstore/src/bootstrap/: main.mbt  moon.pkg
examples/petstore/src/handlers/: handlers.mbt  moon.pkg
lib/: core.mbt  http.mbt  lib.mbt  lib_test.mbt  router.mbt  server.mbt  testing.mbt
main/: generator.mbt  ir.mbt  main.mbt  moon.pkg  parser.mbt  writer.mbt
