[package]
name = "rust-axum"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-axum"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
